<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateOrEditFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/createOrEditToolbarId"
        android:visibility="visible"
        android:background="@color/transparent"
        android:elevation="2dp"
        tools:title="Netoltgy"
        app:navigationIcon="@drawable/ic_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/createOrEditScrollViewId"
        app:layout_constraintTop_toBottomOf="@id/createOrEditToolbarId"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newContentEdtTxtViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/handwriting"
                android:inputType="textMultiLine"
                android:hint="@string/enter_the_idea_content"
                android:maxLength="100"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addImageBtnId"
                style="@style/TransparentBtnStyle.BtnWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/add_image"
                app:icon="@drawable/ic_add_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newContentEdtTxtViewId"
                tools:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/removeImageBtnId"
                style="@style/TransparentBtnStyle.BtnWithText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="4dp"
                android:includeFontPadding="false"
                android:text="@string/remove_image"
                android:visibility="gone"
                app:icon="@drawable/ic_remove_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addImageBtnId"
                tools:visibility="visible" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/addingImageImgViewId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/removeImageBtnId"
                tools:src="@drawable/sandman_temp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addLinkBtnId"
                style="@style/TransparentBtnStyle.BtnWithText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="4dp"
                android:includeFontPadding="false"
                android:text="@string/add_link"
                app:icon="@drawable/ic_add_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addingImageImgViewId"
                tools:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/removeLinkBtnId"
                style="@style/TransparentBtnStyle.BtnWithText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:includeFontPadding="false"
                android:text="@string/remove_link"
                app:icon="@drawable/ic_remove_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addLinkBtnId" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/linkTxtViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:autoLink="web"
                android:paddingHorizontal="4dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/removeLinkBtnId"
                tools:text="https://medium.com/android-beginners/shapeableimageview-material-components-for-android-cac6edac2c0d" />

            <View
                android:id="@+id/blankViewId"
                android:layout_height="16dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/linkTxtViewId"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/linkGroupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="linkTxtViewId, removeLinkBtnId"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/imageGroupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="addingImageImgViewId, removeImageBtnId"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveIdeaBtnId"
        android:enabled="false"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/save"
        android:foreground="@drawable/ic_save_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>